test/expected/explain_hl.out
explain short long x
        ^
9: error: "short long" is illegal for built-in type
